# bsc-defi-tracker

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: main.py  scrape.py
